What's New for OpenJPEG

* : fixed
- : removed
! : changed
+ : added

November 19, 2011
* [vincent] fix compilation of libopenjpip (libcurl dependency) with CMake. Credit to Winfried.

November 16, 2011
* [vincent] fix compilation of libopenjpip (libcurl dependency) with the autotools and fix 'distcheck' rule

October 21, 2011
* [mickael] remove one obvious memory leak from test functions
! [kaori]   change -v option was renamed to -u, which is equivalent to -TP long option

October 20, 2011
* [mickael] remove obvious memory leak from applications

October 19, 2011
* [mickael] backport rev 1013-1014 from trunk

October 10, 2011
* [vincent] fix 'distcheck' rule
* [antonin] modified indexer for JPIP, JPP-stream
! [kaori]   change -v option was reactivated for JPIP

October 7, 2011
+ [mickael] enhance non regression test suite generation (and some test names). It is based on a file as encoder previously.  
+ [mickael] add tests about jp2 conformance
+ [mickael] rename opj_configh.cmake.in to opj_config.h.cmake.in and update CMakeLists.txt to be more clear


October 6, 2011
+ [mickael] enhance html documentation generation with cmake and add a openjpeg mainpage to this doc
+ [mickael] enhance some new JPIP files with opj_config inclusion and using of opj_free/opj_calloc functions (credit to Julien Malik)

October 1, 2011
* [vincent] fix output when --disable-shared or --disable-static is passed to configure. Minor fix for jpwl compilation.

September 9, 2011
+ [antonin] added a new indexer functionality to the library. With the new '-jpip' option at encoding, the user can now generate a JP2 file including an XML box with the index used when browsing the image with JPIP. 

September 2, 2011
! [mickael] correct nightly crash on all platform linked to merge operation and missing opj_getopt command

September 1st, 2011
! [antonin] renamed getopt.{c/h} to opj_getopt.{c/h} and forced the use of these files rather than the system ones. This fixed issue 78. Credit to Winfried.